[tool.poetry]
name = "bridgeapp"
version = "0.1.dev0"
description = "A lightweight web application for playing contract bridge"
authors = ["Jaakko Moisio <jaakko@moisio.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pyzmq = "^19.0.1"
more-itertools = "^8.3.0"
pydantic = "^1.5.1,<1.8"  # TODO: unit tests failing with 1.8, investigate
orjson = ">=3.3,<3.4"
fastapi = {extras = ["uvicorn", "orjson"], version = "^0.58.0"}
gunicorn = "^20.0.4"
SQLAlchemy = "^1.3.23"
SQLAlchemy-Utils = "^0.36.8"
databases = {extras = ["postgresql"], version = "^0.4.1"}
psycopg2-binary = "^2.8.6"
aiopg = "^1.1.0"
passlib = "^1.7.4"
fastpbkdf2 = "^0.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
elasticsearch = {extras = ["async"], version = "^7.12.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.12.0"
black = "^19.10b0"
pylint = "^2.5.2"
sphinx = "^3.0.4"
sphinx-rtd-theme = "^0.4.3"
click = "^7.1.2"
coverage = "^5.1"
click-log = "^0.3.2"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
